// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpGuide should match a snapshot 1`] = `
<div
  className="help-guide-content"
>
  <CSSTransition
    classNames="fade"
    in={true}
    nodeRef={
      Object {
        "current": null,
      }
    }
    timeout={300}
  >
    <div>
      <div>
        MockChildren
      </div>
    </div>
  </CSSTransition>
</div>
`;

exports[`HelpGuide should match a snapshot 2`] = `
<div
  className="help-guide-content"
>
  <CSSTransition
    classNames="fade"
    in={false}
    nodeRef={
      Object {
        "current": null,
      }
    }
    timeout={300}
  >
    <div>
      <div>
        MockChildren
      </div>
    </div>
  </CSSTransition>
</div>
`;
